# mcp-adk-learn

./: .env.example  README.md  pyproject.toml
01_basic_agent/: README.md
01_basic_agent/hello_world/: agent.py
agents/: local_model.py
agents/01_basic_agent/: README.md
agents/01_basic_agent/hello_world/: agent.py
agents/02_tools_agent/: README.md
agents/02_tools_agent/current_datetime_tool/: agent.py
agents/03_remote_api_agent/: README.md
agents/03_remote_api_agent/joke_picker/: agent.py
agents/04_structured_agent/: README.md
agents/04_structured_agent/university_search/: agent.py
